src/style.css
@media (max-width: 700px) {
  body {
    max-width: 100%;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    text-align: center;
  }

  h1 {
    font-size: 25px !important;
    color: red;
    line-height: 30px !important;
  }

  h2 {
    font-size: 14px !important;
    font-weight: 200;
    margin: 5px 5px !important;
  }

  h3 {
    font-size: 16px !important;
  }

  p {
    text-align: justify;
  }

  .project-card {
    text-align: center !important;
  }

  .main-block {
    padding: 0 5px !important;
  }

  .hidden-img {
    display: none;
  }

  .button {
    margin: 0 auto;
    padding: 15px !important;
  }
}

/* DESKTOP STARTS HERE */

body {
  background-color: #2c3039;
  font-family: "Roboto", sans-serif;
  max-width: 100%;
}

h1,
h2,
h3 {
  color: white;
  text-align: center;
}

h1 {
  font-size: 72px;
  line-height: 85px;
  letter-spacing: 10px;
}
h2 {
  font-size: 24px;
  font-weight: 400;
  line-height: 28.13px;
  letter-spacing: 10px;
  margin-top: ;
}

h3 {
  font-weight: 200;
  display: inline;
  font-size: 25px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

h4 {
  color: rgba(219, 146, 20, 1);
  font-weight: 100;
  font-size: smaller;
}
h5 {
  color: #b2bfdf;
  text-align: center;
  font-weight: 100;
}

p,
li {
  color: #b2bfdf;
}

hr.h-color {
  color: white;
}

li {
  font-weight: 200;
  letter-spacing: 3px;
}

a {
  text-decoration: none;
  color: #b2bfdf;
}

a:hover {
  color: #fdaf41;
  padding-top: 10px;
  padding-bottom: 5px;
  font-size: 17px;
}

/*a {
  transition: all 250ms ease-in;
}*/

.a-button:hover {
  color: aquamarine !important;
}

.sidebar li a {
  color: white;
}

.fa-mine {
  margin-right: 3px;
}

.describe {
  margin: 10px 100px;
  text-align: right !important;
}

.content {
  min-height: 100vh;
}

.main-block {
  padding: 30px 100px;
  margin: 97px 60px;
}

.glow {
  text-shadow: rgba(255, 214, 143, 0.9) 0px 0px 87px,
    rgba(255, 231, 189, 0.51) 0px 0px 28px;

  transition: all 700ms ease-in-out;
}

.glow:hover {
  text-shadow: rgba(255, 214, 143, 0.986) 0px 0px 87px,
    rgba(219, 146, 20, 1) 0px 0px 243px, rgba(255, 245, 227, 0.893) 0px 0px 28px,
    rgba(255, 253, 250, 1) 0px 0px 23px;
}

.hiddenglow {
  text-shadow: none;

  /*transition: all 50ms ease-out;*/
}

.hidden-img {
  filter: grayscale(85%);
  transition: all 400ms ease-in-out;
}

.hidden-img:hover {
  filter: grayscale(0%);
}

.hiddenglow:hover {
  text-shadow: rgba(255, 214, 143, 0.986) 0px 0px 87px,
    rgba(219, 146, 20, 1) 0px 0px 243px, rgba(255, 245, 227, 0.893) 0px 0px 28px,
    rgba(255, 253, 250, 1) 0px 0px 23px;
}

.project-card {
  text-align: right;
}

div#side-nav {
  transition: all 400ms ease-in-out;
}

#projects-heading {
  font-size: 48px;
  font-weight: 200 !important;
  line-height: 85px;
  letter-spacing: 10px;
  margin-top: 200px;
  margin-bottom: 50px;
  padding: 20px 15px;
}

.button {
  background-color: rgba(104, 98, 98, 0.198);
  border-radius: 50px;
  display: block;
  margin: 0 auto;
  padding: 18px 40px;
  color: grey;
  font-size: 14px;
  letter-spacing: 6px;
  border: none;
  transition: all 500ms ease-in;
}

.button:hover {
  font-size: 16px;
  letter-spacing: 9px;
  background-color: transparent;
}

.menu-btns {
  transition: all 50ms ease-out;
  transition-delay: 0.5s;
}

.sign {
  font-size: 9px;
  font-weight: 100;
  transition: all 70ms ease-in;
}

a.sign:hover {
  font-size: 10px;
  color: grey;
}

#menulist {
  padding: 5px 10px;
  margin: 114px 24px;
}

